--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <!-- đổi title -->
   </head>
   <body>
-    <h1>Lorem ipsum dolor sit amt.</h1>
+    <h1>Bo la siu nhan</h1>
     <h2>Thật đáng sợ</h2>
     <h3>Thật he</h3>
     <h4>wow</h4>
     <h5>wow</h5>
-    <h6>woww</h6>
+    <h6>Yamate</h6>
   </body>
 </html>
