--- a/index.html
+++ b/index.html
@@ -7,11 +7,73 @@
     <!-- đổi title -->
   </head>
   <body>
-    <h1>Bo la siu nhan</h1>
-    <h2>Thật đáng sợ</h2>
-    <h3>Thật he</h3>
-    <h4>wow</h4>
-    <h5>wow</h5>
-    <h6>Yamate</h6>
+    <a href="/">Home</a>
+    <a href="/index1.html">Hình ảnh</a>
+    <a href="/contact/contactme.html">Contact</a>
+    <a href="/contact/contact_img.html">SourceImg</a>
+    <h1>Anh hùng xạ điêu</h1>
+    <h2>Chương 1</h2>
+    <p>Ối dồi ôi trình là gì mà là trình ai chấm</p>
+    <a href=""></a>
+    <h3>Phần 1</h3>
+    <i>Anh hùng xạ điêu éc éc</i>
+    <h3>Phần 2</h3>
+    <i>Cô cô rên như con chó</i>
+    <h2>Chương 2</h2>
+    <p>Sự trỗi dậy của lũ đầu cặc</p>
+    <h3>Phần 1</h3>
+    <i><b>Vào cái dập luôn ảo chưa</b></i>
+    <h4>Tóm tắt chương 2</h4>
+    <a href="/contact/contact_img.html">
+      <img src="/img/img1.jpg" alt="Ảo ma lazada" width="300" height="200" />
+    </a>
+      <h2>Chương 3</h2>
+    <h3>Phần 1</h3>
+    <h3>Phần 2</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
+      exercitationem velit vero quas neque suscipit quibusdam temporibus
+      <hr>
+      consectetur adipisicing elit. Eius consequuntur<br />
+      accusantium repellat porro quam non soluta nihil sint numquam veritatis<br />
+      dolorem iure a, tempore modi, in velit itaque esse. Eum! Lorem ipsum
+      dolor<br />
+    </p>
+    <ul>
+      <li>item1</li>
+      <li>item2</li>
+      <li>item3</li>
+    </ul>
+
+    <ol>
+      <li>item1</li>
+      <li>item2</li>
+      <li>item3</li>
+    </ol>
+
+    <ol type="i">
+      <li>yamate1</li>
+      <li>yamate2</li>
+      <li>yamate3</li>
+      <li>yamate4</li>
+    </ol>
+
+    <h1><b>Ngăn cách</b></h1>
+    <hr>
+
+    <ol type="I">
+      <li><b>Mở bài: giới thiệu nhân vật trong truyện cổ tích</b></li>
+      <li><b>Thân bài: tả nhân vật trong truyện cổ tích</b></li>
+      <ol type="1">
+        <li>Tả bao quát nhân vật trong truyện cổ tích</li>
+        <li>Tả chi tiết nhân vật trong truyện cổ tích</li>
+        <ol type="a">
+          <li>Tả ngoại hình</li>
+          <li>Tả tính tình</li>
+          <li>Tả hoạt động</li>
+        </ol>
+      </ol>
+      <li><b>Kết bài: Nêu cảm nghĩ</b></li>
+    </ol>
   </body>
 </html>
