--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <!-- đổi title -->
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/index1.html">Hình ảnh</a>
-    <a href="/contact/contactme.html">Contact</a>
-    <a href="/contact/contact_img.html">SourceImg</a>
+    <a href="">Home</a>
+    <a href="index1.html">Hình ảnh</a>
+    <a href="contact/contactme.html">Contact</a>
+    <a href="contact/contact_img.html">SourceImg</a>
     <h1>Anh hùng xạ điêu</h1>
     <h2>Chương 1</h2>
     <p>Ối dồi ôi trình là gì mà là trình ai chấm</p>
@@ -24,7 +24,7 @@
     <h3>Phần 1</h3>
     <i><b>Vào cái dập luôn ảo chưa</b></i>
     <h4>Tóm tắt chương 2</h4>
-    <a href="/contact/contact_img.html">
+    <a href="contact/contact_img.html">
       <img src="/img/img1.jpg" alt="Ảo ma lazada" width="300" height="200" />
     </a>
       <h2>Chương 3</h2>
