--- a/contact/contactme.html
+++ b/contact/contactme.html
@@ -6,8 +6,8 @@
     <title>Contact</title>
   </head>
   <body>
-    <a href="">Home</a>
-    <a href="index1.html">Hình ảnh</a>
+    <a href="../index.html">Home</a>
+    <a href="../index1.html">Hình ảnh</a>
     <a href="contact/contactme.html">Contact</a>
     <a href="contact/contact_img.html">SourceImg</a>
     <h1><b>Liên hệ tôi</b></h1>
