--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- đổi title -->
   </head>
   <body>
-    <a href="">Home</a>
+    <a href="index.html">Home</a>
     <a href="index1.html">Hình ảnh</a>
     <a href="contact/contactme.html">Contact</a>
     <a href="contact/contact_img.html">SourceImg</a>
