--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
     <title>Hehe</title>
   </head>
   <body>
-    <a href="../Web Sếch/index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="index1.html">Hình ảnh</a>
     <a href="../Web Sếch/contact/contactme.html">Contact</a>
     <a href="../Web Sếch/contact/contact_img.html">SourceImg</a>
