--- a/contact/contact_img.html
+++ b/contact/contact_img.html
@@ -8,8 +8,8 @@
   <body>
     <a href="../index.html">Home</a>
     <a href="../index1.html">Hình ảnh</a>
-    <a href="../Web Sếch/contact/contactme.html">Contact</a>
-    <a href="../Web Sếch/contact/contact_img.html">SourceImg</a>
+    <a href="../contact/contactme.html">Contact</a>
+    <a href="../contact/contact_img.html">SourceImg</a>
     <h1><b>Nguồn trang ảnh</b></h1>
     <a
       href="https://images2.thanhnien.vn/528068263637045248/2024/1/25/e093e9cfc9027d6a142358d24d2ee350-65a11ac2af785880-17061562929701875684912.jpg"
