--- a/contact/contactme.html
+++ b/contact/contactme.html
@@ -6,10 +6,10 @@
     <title>Contact</title>
   </head>
   <body>
-    <a href="../index.html">Home</a>
-    <a href="../index1.html">Hình ảnh</a>
-    <a href="../Web Sếch/contact/contactme.html">Contact</a>
-    <a href="../Web Sếch/contact/contact_img.html">SourceImg</a>
+    <a href="index.html">Home</a>
+    <a href="index1.html">Hình ảnh</a>
+    <a href="contact/contactme.html">Contact</a>
+    <a href="contact/contact_img.html">SourceImg</a>
     <h1><b>Liên hệ tôi</b></h1>
     <a href="https://facebook.com" target="_blank">facebook</a><br />
     <a href="https://youtube.com" target="_parent">youtube</a><br />
