--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <!-- đổi title -->
   </head>
   <body>
-    <a href="index.html">Home</a>
+  <a href="index.html">Home</a>
     <a href="index1.html">Hình ảnh</a>
-    <a href="contactme.html">Contact</a>
-    <a href="contact_img.html">SourceImg</a>
+    <a href="./contact/contactme.html">Contact</a>
+    <a href="./contact/contact_img.html">SourceImg</a>
     <h1>Anh hùng xạ điêu</h1>
     <h2>Chương 1</h2>
     <p>Ối dồi ôi trình là gì mà là trình ai chấm</p>
