--- a/index1.html
+++ b/index1.html
@@ -8,8 +8,8 @@
   <body>
     <a href="index.html">Home</a>
     <a href="index1.html">Hình ảnh</a>
-    <a href="contactme.html">Contact</a>
-    <a href="contact_img.html">SourceImg</a>
+    <a href="./contact/contactme.html">Contact</a>
+    <a href="./contact/contact_img.html">SourceImg</a>
     <h1><b>Hình ảnh đẹp</b></h1>
     <img
       src="https://plus.unsplash.com/premium_photo-1749729695562-61175ca6a387?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyfHx8ZW58MHx8fHx8"
